@@ -1,3 +1,6 @@
+NEXT:
+    * Allow subtests to take a pre-constructed block object
+
 1.301001_105:
     * Update list of known broken downstream modules
     * Fix untriggered Srream/Exporter bug
